# secure-auth-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  codecov.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/routes/: auth.py  users.py
app/core/: config.py  datetime_utils.py  dependencies.py  middleware.py  security.py  token_blacklist.py
app/db/: models.py  session.py  types.py
app/schemas/: user.py
auth/: password.py  validator.py
secure_auth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/secure-auth/: .dockerignore  Dockerfile  requirements.txt
src/secure-auth/alembic/versions/: 5e3526e9e493_add_token_version_to_users.py
src/secure-auth/app/: deps.py  main.py
src/secure-auth/app/api/routes/: auth.py  users.py
src/secure-auth/app/core/: middleware.py
src/secure-auth/app/db/: init_db.py  models.py
src/secure-auth/app/schemas/: user.py
src/secure-auth/auth/: password.py
src/secure-auth/examples/: login_rate_limit.py
src/secure-auth/tests/: test_password.py  test_token_blacklist.py
tests/: conftest.py  test_health.py  test_password.py
tests/integration/: conftest.py  test_auth_flow.py  test_logout_all.py
