[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-auth"
version = "0.1.0"
description = "Secure password hashing and validation utilities"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "argon2-cffi>=23.1.0",
]

[tool.setuptools]
packages = ["auth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
auth = ["password_blacklist.txt"]
